fix some scrollbar issues

--- a/frontend-app/src/app/globals.css
+++ b/frontend-app/src/app/globals.css
@@ -59,9 +59,13 @@ button {
   min-height: calc(100vh - 4rem - 6.25rem - 7.75rem - 6vh);
 }
 
+::-webkit-scrollbar {
+  width: 1rem;
+}
+
 @media (min-width: 1024px) {
   body {
-    overflow-y: hidden !important;
+    overflow: hidden !important;
   }
   .container {
     width: calc(100vw - 10rem);
