--- a/frontend-app/src/components/nav/Nav.module.css
+++ b/frontend-app/src/components/nav/Nav.module.css
@@ -84,10 +84,10 @@
   font-size: var(--labels-text-size);
   font-weight: 300;
 }
-.sideList .active {
+.sideBar .active {
   background: var(--dark-background-color);
 }
-.sideList .active a {
+.sideBar .active a {
   color: var(--gray-color);
   font-weight: 400;
 }
